--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "testprivate"]
 	path = testprivate
-	url = https://github.com/shiptest-rc-ow/testprivate.git
+	url = git@github.com:shiptest-rc-ow/testprivate.git
