--- a/shippable.yml
+++ b/shippable.yml
@@ -33,5 +33,29 @@ build:
     - echo $secure
     - echo $M1
 
-
- 
+integrations:
+  
+  notifications:
+        - integrationName: email
+          type: email
+          recipients:
+            - shiptest.rc.ow@gmail.com
+            - revathi@shippable.com
+         
+        - integrationName: ship-slack-1
+          type: slack
+          recipients:
+            - "#random"
+        - integrationName: ship-hipchat-1
+          type: hipchat
+          recipients:
+            - '#Private-room'
+            - '@shiphitchcock3'
+       - integrationName: irc
+         type: irc
+         recipients:
+            - "chat.freenode.net#test1"
+          
+       
+        
+     
