--- a/shippable.yml
+++ b/shippable.yml
@@ -19,6 +19,8 @@ branches:
   except:
     - nonmaster
 build:
+  pre_ci:
+    - docker build -t=shippabledocker/samplenodercimg:$BRANCH.$BUILD_NUMBER .
   pre_ci_boot:
     image_name: drydock/u14nod
     image_tag: prod
@@ -33,29 +35,34 @@ build:
     - echo $TEST
     - echo $secure
     - echo $M1
+  post_ci:
+    - docker push shippabledocker/samplenodercimg:$BRANCH.$BUILD_NUMBER
 
 integrations:
+  hub:
+    - integrationName: ship-docker-1
+      type: docker 
   
   notifications:
-        - integrationName: email
-          type: email
-          recipients:
-            - shiptest.rc.ow@gmail.com
-            - revathi@shippable.com
-         
-        - integrationName: ship-slack-1
-          type: slack
-          recipients:
-            - "#random"
-        - integrationName: ship-hipchat-1
-          type: hipchat
-          recipients:
-            - '#Private-room'
-            - '@shiphitchcock3'
-        - integrationName: irc
-          type: irc
-          recipients:
-            - "chat.freenode.net#test1"
+    - integrationName: email
+      type: email
+      recipients:
+        - shiptest.rc.ow@gmail.com
+        - revathi@shippable.com
+            
+    - integrationName: ship-slack-1
+      type: slack
+      recipients:
+        - "#random"
+    - integrationName: ship-hipchat-1
+      type: hipchat
+      recipients:
+        - '#Private-room'
+        - '@shiphitchcock3'
+     - integrationName: irc
+       type: irc
+       recipients:
+        - "chat.freenode.net#test1"
           
        
         
