--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sample_pvt_pr_test_reports"]
 	path = sample_pvt_pr_test_reports
-	url = https://github.com/shiptest-rc-ow/sample_pvt_pr_test_reports.git
+	url = git@github.com:shiptest-rc-ow/sample_pvt_pr_test_reports.git
