--- a/shippable.yml
+++ b/shippable.yml
@@ -45,11 +45,15 @@ build:
   post_ci:
     - docker build -t=$IMAGE_NAME:$BRANCH.$BUILD_NUMBER .
     - docker push $IMAGE_NAME:$BRANCH.$BUILD_NUMBER
+    - docker build -t=gcr.io/vidya-project/node1-img:$BRANCH.$BUILD_NUMBER  .
+    - docker push gcr.io/vidya-project/node1-img:$BRANCH.$BUILD_NUMBER  
 
 integrations:
   hub:
     - integrationName: ship-docker-1
       type: docker 
+    - integrationName: ship-gcr
+      type: gcr
   
   notifications:
     - integrationName: email
