--- a/shippable.yml
+++ b/shippable.yml
@@ -47,8 +47,10 @@ build:
     - docker push $IMAGE_NAME:$BRANCH.$BUILD_NUMBER
     - docker build -t=gcr.io/vidya-project/node1-img:master.33  .
     - docker push gcr.io/vidya-project/node1-img:master.33
-    - docker build -t=742038439709.dkr.ecr.us-west-2.amazonaws.com/samplenode .
-    - docker push 742038439709.dkr.ecr.us-west-2.amazonaws.com/samplenode
+    - docker build -t=quay.io/revathird/samplenode_test .
+    - docker push quay.io/revathird/samplenode_test
+   # - docker build -t=742038439709.dkr.ecr.us-west-2.amazonaws.com/samplenode .
+   # - docker push 742038439709.dkr.ecr.us-west-2.amazonaws.com/samplenode
 
 integrations:
   hub:
@@ -58,6 +60,8 @@ integrations:
       type: gcr
     - integrationName: ship-ecr
       type: ecr
+    - integrationName: ship-quay
+      type: quay.io
   
   notifications:
     - integrationName: email
