--- a/shippable.yml
+++ b/shippable.yml
@@ -49,8 +49,8 @@ build:
     - docker push gcr.io/vidya-project/node1-img:master.33
     - docker build -t=quay.io/revathird/samplenode_test .
     - docker push quay.io/revathird/samplenode_test
-   # - docker build -t=742038439709.dkr.ecr.us-west-2.amazonaws.com/samplenode .
-   # - docker push 742038439709.dkr.ecr.us-west-2.amazonaws.com/samplenode
+    - docker build -t=742038439709.dkr.ecr.us-west-2.amazonaws.com/sample_node .
+    - docker push 742038439709.dkr.ecr.us-west-2.amazonaws.com/sample_node
 
 integrations:
   hub:
