--- a/shippable.yml
+++ b/shippable.yml
@@ -43,8 +43,8 @@ build:
     - echo $IMAGE_TAG
     - echo $IMAGE_PULL
   post_ci:
-    - docker build -t=$IMAGE_NAME:$BRANCH.$BUILD_NUMBER .
-    - docker push $IMAGE_NAME:$BRANCH.$BUILD_NUMBER
+    - docker build -t=$IMAGE_NAME:$IMAGE_TAG .
+    - docker push $IMAGE_NAME:$BRANCH.$IMAGE_TAG
     - docker build -t=gcr.io/vidya-project/node1-img:master.33  .
     - docker push gcr.io/vidya-project/node1-img:master.33
     - docker build -t=quay.io/revathird/samplenode_test .
@@ -60,6 +60,8 @@ integrations:
       type: gcr
     - integrationName: ship-ecr
       type: ecr
+      region: us-west-2
+        
     - integrationName: ship-quay
       type: quay.io
   
