--- a/shippable.yml
+++ b/shippable.yml
@@ -44,7 +44,7 @@ build:
     - echo $IMAGE_PULL
   post_ci:
     - docker build -t=$IMAGE_NAME:$IMAGE_TAG .
-    - docker push $IMAGE_NAME:$BRANCH.$IMAGE_TAG
+    - docker push $IMAGE_NAME:$IMAGE_TAG
     - docker build -t=gcr.io/vidya-project/node1-img:master.33  .
     - docker push gcr.io/vidya-project/node1-img:master.33
     - docker build -t=quay.io/revathird/samplenode_test .
