--- a/shippable.yml
+++ b/shippable.yml
@@ -64,6 +64,9 @@ integrations:
         
     - integrationName: ship-quay
       type: quay.io
+      branches:
+        only:
+          - m
   
   notifications:
     - integrationName: email
