--- a/shippable.yml
+++ b/shippable.yml
@@ -48,31 +48,38 @@ build:
     - echo $IMAGE_TAG
     - echo $IMAGE_PULL
   post_ci:
+  # Testing docker build and push
     - docker build -t=$IMAGE_NAME:$IMAGE_TAG .
     - docker push $IMAGE_NAME:$IMAGE_TAG
+  # Testing gcr build and push
     - docker build -t=gcr.io/vidya-project/node1-img:master.33  .
     - docker push gcr.io/vidya-project/node1-img:master.33
+  # Testing quay build and push
     - docker build -t=quay.io/revathird/samplenode_test .
     - docker push quay.io/revathird/samplenode_test
+   # Testing ecr build and push
     - docker build -t=742038439709.dkr.ecr.us-west-2.amazonaws.com/sample_node .
     - docker push 742038439709.dkr.ecr.us-west-2.amazonaws.com/sample_node
 
 integrations:
   hub:
-    - integrationName: ship-docker-1
+  #Docker integration
+    - integrationName: ship-docker-1 
       type: docker 
+  #GCR integration
     - integrationName: ship-gcr
       type: gcr
+  #ECR integration
     - integrationName: ship-ecr
       type: ecr
       region: us-west-2
-      branches:
+      branches: #Testing the wildcards for branches exclude
         except:
           - n*
-        
+  #Quay.io integration    
     - integrationName: ship-quay
       type: quay.io
-      branches:
+      branches: #Testing the wildcards for branches include
         only:
           - m*
   
