--- a/shippable.yml
+++ b/shippable.yml
@@ -16,9 +16,7 @@ env:
     - IMAGE_NAME=shippabledocker/sample_node_pvt
     - IMAGE_TAG=latest.40
     - IMAGE_PULL=true
-   
-
-  matrix:
+   matrix:
     - M1=ONE
 #Testing for include and exclude branches
 branches:
@@ -26,6 +24,8 @@ branches:
     - master
   except:
     - nonmaster
+git:
+   submodules: false
 build:
   pre_ci:
   #Testing for pre_ci carrying over to pre_ci_boot
