--- a/shippable.yml
+++ b/shippable.yml
@@ -24,8 +24,9 @@ branches:
     - master
   except:
     - nonmaster
-git:
-   submodules: false
+#Uncomment below section to disable the private submodules
+#git:
+   #submodules: false
 build:
   pre_ci:
   #Testing for pre_ci carrying over to pre_ci_boot
