--- a/shippable.yml
+++ b/shippable.yml
@@ -58,8 +58,8 @@ build:
     - echo $BUILD_NUM #echoes the envs specified in the payload of project-event trigger
   post_ci:
   # Testing docker build and push
-    - docker build -t=$IMAGE_NAME:$IMAGE_TAG .
-    - docker push $IMAGE_NAME:$IMAGE_TAG
+    #- docker build -t=$IMAGE_NAME:$IMAGE_TAG .
+   # - docker push $IMAGE_NAME:$IMAGE_TAG
   # Testing gcr build and push
     - docker build -t=gcr.io/vidya-project/node1-img:master.33  .
     - docker push gcr.io/vidya-project/node1-img:master.33
@@ -73,8 +73,8 @@ build:
 integrations:
   hub:
   #Docker integration
-    - integrationName: ship-docker-1 
-      type: docker 
+    #- integrationName: ship-docker-1 
+     # type: docker 
   #GCR integration
     - integrationName: ship-gcr
       type: gcr
