--- a/shippable.yml
+++ b/shippable.yml
@@ -97,21 +97,27 @@ integrations:
       recipients:
         - shiptest.rc.ow@gmail.com
         - revathi@shippable.com
-            
+      on_success: always
+      on_failure: always
     - integrationName: ship-slack-1
       type: slack
       recipients:
         - "#random"
+      on_success: always
+      on_failure: always
     - integrationName: ship-hipchat-1
       type: hipchat
       recipients:
         - '#Private-room'
         - '@shiphitchcock3'
+      on_success: always
+      on_failure: always
     - integrationName: irc
       type: irc
       recipients:
         - "chat.freenode.net#test1"
-  
+      on_success: always
+      on_failure: always
        
         
      
