--- a/shippable.yml
+++ b/shippable.yml
@@ -51,7 +51,7 @@ build:
     - echo $IMAGE_NAME
     - echo $IMAGE_TAG
     - echo $IMAGE_PULL
-    - echo $custom #echoes the env specified for UI custom build
+    - echo $custom #echoes the env specified from UI custom build
     - echo $FOO
     - echo $GOO
     - echo $BUILD_NUM #echoes the envs specified in the payload of project-event trigger
