--- a/shippable.yml
+++ b/shippable.yml
@@ -31,7 +31,7 @@ build:
   #Testing for pre_ci carrying over to pre_ci_boot
     - export IMAGE_TAG="latest"
     - echo $IMAGE_TAG
-   
+    - thy
     
   pre_ci_boot:
     image_name: $IMAGE_NAME
