--- a/shippable.yml
+++ b/shippable.yml
@@ -57,7 +57,7 @@ build:
     - echo $BUILD_NUM #echoes the envs specified in the payload of project-event trigger
     - echo $key1 #echoes the value of custom integrations added through key-value pair integrations.
     - echo $key2
-    - echo jobTriggeredByName="$JOB_TRIGGRED_BY_NAME"
+    - echo jobTriggeredByName="$JOB_TRIGGERED_BY_NAME"
    
    
   post_ci:
