--- a/shippable.yml
+++ b/shippable.yml
@@ -22,17 +22,17 @@ env:
 git:
    submodules: false
 build:
-  pre_ci:
+ # pre_ci:
   #Testing for pre_ci carrying over to pre_ci_boot
-    - export IMAGE_TAG="latest"
-    - echo $IMAGE_TAG
+   # - export IMAGE_TAG="latest"
+   # - echo $IMAGE_TAG
    
     
-  pre_ci_boot:
-    image_name: $IMAGE_NAME
-    image_tag: $IMAGE_TAG
-    pull: $IMAGE_PULL
-    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false' 
+ # pre_ci_boot:
+  #  image_name: $IMAGE_NAME
+  #  image_tag: $IMAGE_TAG
+  #  pull: $IMAGE_PULL
+  #  options: '--privileged=true --net=bridge -e FOO=true -e BOO=false' 
 
   ci:
    
@@ -56,13 +56,13 @@ build:
     - echo jobTriggeredByName="$JOB_TRIGGERED_BY_NAME"
    
    
-  post_ci:
+  #post_ci:
   # Testing docker build and push
-    - docker build -t=$IMAGE_NAME:$IMAGE_TAG .
-    - docker push $IMAGE_NAME:$IMAGE_TAG
+   # - docker build -t=$IMAGE_NAME:$IMAGE_TAG .
+   # - docker push $IMAGE_NAME:$IMAGE_TAG
   # Testing gcr build and push
-    - docker build -t=gcr.io/vidya-project/node1-img:master.33  .
-    - docker push gcr.io/vidya-project/node1-img:master.33
+   # - docker build -t=gcr.io/vidya-project/node1-img:master.33  .
+   # - docker push gcr.io/vidya-project/node1-img:master.33
   # Testing quay build and push
     #- docker build -t=quay.io/revathird/samplenode_test .
     #- docker push quay.io/revathird/samplenode_test
