--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -3,14 +3,21 @@ resources:
     type: gitRepo
     integration: bitbucket
     pointer:
-      sourceName: "rctestorg/sample-script-3"
+      sourceName: "shiptest-rc-me/sample-script-pub"
+      branch: master      
+  
+  - name: sample-scriptpvt
+    type: gitRepo
+    integration: bitbucket
+    pointer:
+      sourceName: "shiptest-rc-me/sample-script-pvt"
       branch: master
-    flags: git1
+      
   - name: test-trigger01-pub
     type: time
     seed:
       interval: "*/4 * * * *"
-    flags: t1
+
   - name: sample_img_pub
     type: image
     integration: ship-docker
@@ -18,4 +25,3 @@ resources:
       sourceName: "shippabledocker/pipelinev2"
     seed:
       versionName: "deploy.2"
-    flags: image1
