--- a/shippable.yml
+++ b/shippable.yml
@@ -3,8 +3,7 @@ language: node_js
 
 # Version number
 node_js:
-  - 0.10
-    
+  - 0.10    
 
 #Uncomment below section to disable the private submodules
 git:
@@ -12,7 +11,7 @@ git:
    
 build:
   ci:
-    - echo "Hello"
+    - echo "Hello!"
     - node --version
     - lsb_release -a
     - docker --version
