shippable.resources.yml edited online with Bitbucket

--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -25,3 +25,10 @@ resources:
       sourceName: "shippabledocker/pipelinev2"
     seed:
       versionName: "deploy.2"
+  - name: sample_img_pub123
+    type: image
+    integration: docker
+    pointer:
+      sourceName: "shippabledocker/pipelinev2"
+    seed:
+      versionName: "deploy.2"
