--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -4,8 +4,6 @@ jobs:
     allowPublicAccess: false
     steps:
       - IN: sample-pub
-     # - IN: trigger01
-    #  - IN: test-trigger01
       - TASK:
         - script: IN/sample-pub/gitRepo/echo.sh
     flags: job1
@@ -40,3 +38,45 @@ jobs:
       - IN: runcliscript-job-pub
       - TASK:
         - script: ls
+
+  - name: sample_publicrepo_runCI
+    type: runCI
+    steps:
+      - IN: sample_publicrepo_ciRepo
+    flags:
+      - sample_publicrepo_runCI
+      - sample_publicrepo_runCIEnabledFromCIbutAddedFlagsInJobsYml
+      
+      
+  - name: sample-release-pub
+    type: release
+    allowPublicAccess: true
+    steps:
+      - IN: sample-version-pub
+      - TASK: managed
+        bump: rc
+        
+  - name: sample-ddcdeploy-pub
+    type: deploy
+    allowPublicAccess: true
+    steps:
+      - IN: sample-ddccluster-pub
+      - IN: manifest_dep_pub
+      - IN: sample-params-pub
+      - IN: sample-dopts-pub
+    on_success:
+      - NOTIFY: sample-email-pub
+      - NOTIFY: sampple-slack-pub
+      
+  - name: sample-provision-pub                                                 
+    type: provision                                             
+    steps:
+      - IN: sample-files-pub
+      
+  - name: ar-jenkins                  # a memorable, unique name. this is how your job will be referred to in shippable pipelines
+    type: jenkinsJob                  # The type of the job (should not be changed by the user)
+    integration: "jenkins"   # The name of your Jenkins integration (created via accountSettings page)
+    pointer:
+      sourceName: "firstjob"          # The name of your Jenkins job
+    steps:
+      - OUT: "sample-files-pub"
