--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -57,30 +57,14 @@ jobs:
       - IN: sample-version-pub
       - TASK: managed
         bump: rc
+
+  - name: runsh-param1-pub
+    type: runSh
+    steps:
+      - IN: test_params1pub
+      - TASK:
+        - script: echo "A=$A"
+        - script: echo "B=$B"
+        - script: echo "p1=$p1"
+        - script: echo "p2=$p2"
         
-  - name: sample-ddcdeploy-pub
-    type: deploy
-    allowPublicAccess: true
-    steps:
-      - IN: sample-ddccluster-pub
-      - IN: manifest_dep_pub
-      - IN: sample-params-pub
-      - IN: sample-dopts-pub
-    on_success:
-      - NOTIFY: sample-email-pub
-      - NOTIFY: sample-slack-pub
-      
-  - name: sample-provision-pub                                                 
-    type: provision     
-    allowPublicAccess: true
-    steps:
-      - IN: sample-files-pub
-      
-  - name: ar-jenkins                  # a memorable, unique name. this is how your job will be referred to in shippable pipelines
-    type: jenkinsJob # The type of the job (should not be changed by the user)
-    allowPublicAccess: true
-    integration: "jenkins"   # The name of your Jenkins integration (created via accountSettings page)
-    pointer:
-      sourceName: "firstjob"          # The name of your Jenkins job
-    steps:
-      - OUT: "sample-files-pub"
