--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -52,3 +52,48 @@ jobs:
         - script: echo "B=$B"
         - script: echo "p1=$p1"
         - script: echo "p2=$p2"
+  
+  - name: runsh-param2-pub
+    type: runSh
+    steps:
+      - IN: test_params2pub
+      - TASK:
+        - script: echo "foo=$foo"
+        - script: echo "boo=$boo"
+        - script: echo "p3=$p3"
+        - script: echo "p4=$p4"
+  
+  - name: runsh-param3-pub
+    type: runSh
+    steps:
+      - IN: test_params3pub
+      - IN: runsh-param2-pub
+      - TASK:
+        - script: echo "foo=$foo"
+        - script: echo "boo=$boo"
+        - script: echo "p3=$p3"
+        - script: echo "p4=$p4"
+        - script: echo "p5=$p5"
+        - script: echo "p6=$p6"
+        
+  - name: runsh-param1234-pub
+    type: runSh
+    steps:
+      - IN: test_params1pub
+      - IN: test_params2pub
+      - IN: test_params3pub
+      - IN: test_params4pub
+      - TASK:
+        - script: echo "A=$A"
+        - script: echo "B=$B"
+        - script: echo "p1=$p1"
+        - script: echo "p2=$p2"
+        - script: echo "foo=$foo"
+        - script: echo "boo=$boo"
+        - script: echo "p3=$p3"
+        - script: echo "p4=$p4"
+        - script: echo "p5=$p5"
+        - script: echo "p6=$p6"  
+        - script: echo "p7=$p7"
+        - script: echo "p8=$p8"
+        
