--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -30,10 +30,10 @@ jobs:
     allowPublicAccess: true
     steps:
       - IN: sample_publicrepo_ciRepo
+      - IN: ar-paramsUserDefinedpub
     flags:
       - sample_publicrepo_runCIparam
-      - sample_publicrepo_runCIEnabledFromCIbutAddedFlagsInJobsYmlparam
-      
+      - sample_publicrepo_runCIEnabledFromCIbutAddedFlagsInJobsYmlparam      
       
   - name: sample-release-pubparam
     type: release
