shippable.jobs.yml edited online with Bitbucket

--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -17,7 +17,20 @@ jobs:
       - TASK:
         - script: IN/sample-scriptpvt/gitRepo/echo.sh
     flags: job-runcli
-        
+  
+  - name: sample_publicrepo_runCI
+    type: runCI
+    steps:
+      - IN: sample_publicrepo_ciRepo
+      - IN: tr2
+  
+  - name: runsh-jobrunCI-pub
+    type: runSh
+    steps:
+      - IN: sample_publicrepo_runCI
+      - IN: tr3
+      - TASK:
+        - script: ls
         
   - name: manifest_dep_pub
     type: manifest
