shippable.jobs.yml edited online with Bitbucket

--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -23,7 +23,7 @@ jobs:
     allowPublicAccess: true
     steps:
       - IN: sample_img_pubparam
-    flags: manifestparam
+    flags: manifestparam1
 
   #- name: sample_publicrepo_runCI
   #  type: runCI
