shippable.jobs.yml edited online with Bitbucket

--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -18,19 +18,19 @@ jobs:
         - script: IN/sample-scriptpvt/gitRepo/echo.sh
     flags: runcliscript-job-pub
   
-  #- name: sample_publicrepo_runCI
-   # type: runCI
-    #steps:
-     # - IN: sample_publicrepo_ciRepo
-      #- IN: tr2
+  - name: sample_publicrepo_runCI
+    type: runCI
+    steps:
+      - IN: sample_publicrepo_ciRepo
+      - IN: tr2
   
-  #- name: runsh-jobrunCI-pub
-  #  type: runSh
-  #  steps:
-      #- IN: sample_publicrepo_runCI
-   #   - IN: tr3
-    #  - TASK:
-   #     - script: ls
+  - name: runsh-jobrunCI-pub
+    type: runSh
+    steps:
+      - IN: sample_publicrepo_runCI
+      - IN: tr3
+      - TASK:
+        - script: ls
         
   - name: manifest_dep_pub
     type: manifest
