shippable.triggers.yml edited online with Bitbucket

--- a/shippable.triggers.yml
+++ b/shippable.triggers.yml
@@ -28,4 +28,9 @@ triggers:
     type: trigger
     version:
       counter: 0
+
+  - name: tr7
+    type: trigger
+    version:
+      counter: 0
       
