shippable.triggers.yml edited online with Bitbucket

--- a/shippable.triggers.yml
+++ b/shippable.triggers.yml
@@ -48,3 +48,8 @@ triggers:
     type: trigger
     version:
       counter: 0
+  
+  - name: tr11
+    type: trigger
+    version:
+      counter: 0
