--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -89,11 +89,11 @@ jobs:
     steps:
       - IN: sample-files-pub
       
-  - name: ar-jenkins                  # a memorable, unique name. this is how your job will be referred to in shippable pipelines
-    type: jenkinsJob # The type of the job (should not be changed by the user)
-    allowPublicAccess: true
-    integration: "jenkins"   # The name of your Jenkins integration (created via accountSettings page)
-    pointer:
-      sourceName: "firstjob"          # The name of your Jenkins job
-    steps:
-      - OUT: "sample-files-pub"
+ # - name: ar-jenkins                  # a memorable, unique name. this is how your job will be referred to in shippable pipelines
+ #   type: jenkinsJob # The type of the job (should not be changed by the user)
+ #   allowPublicAccess: true
+ #   integration: "jenkins"   # The name of your Jenkins integration (created via accountSettings page)
+ #   pointer:
+ #     sourceName: "firstjob"          # The name of your Jenkins job
+ #   steps:
+ #     - OUT: "sample-files-pub"
